# target/swagger.yaml
@@ -13,15 +13,64 @@ consumes:
 produces:
   - application/json
   
-
+  
+securityDefinitions:
+  OauthSecurity:
+    type: oauth2
+    flow: accessCode
+    authorizationUrl: 'https://accounts.google.com/o/oauth2/v2/auth'
+    tokenUrl: 'https://www.googleapis.com/oauth2/v4/token'
+    scopes:
+      admin: Admin scope
+      user: User scope
+security:
+  - OauthSecurity:
+    - user
  
 paths:
+  /login:
+    get:
+      summary: login through oauth2 server
+      tags: 
+       - Security
+      security: []
+      responses:
+        '200':
+          description: login
+          schema:
+            properties:
+              access_token:
+                type: string
+                format: string
+        default:
+          description: error
+          schema:
+            $ref: "#/definitions/error"
+  /auth/callback:
+    get:
+      summary: return access_token
+      security: []
+      tags:
+        - Security
+      responses:
+        '200':
+          description: login
+          schema:
+            properties:
+              access_token:
+                type: string
+                format: string
+        default:
+          description: error
+          schema:
+            $ref: "#/definitions/error"
   /objects/{bucket}/{objectID}:
     get:
       summary: Get object by bucket name and object id.
       operationId: 'getObject'
       tags:
         - Object Management
+      security: []
       parameters:
         - name: 'bucket'
           in: path
@@ -63,6 +112,7 @@ paths:
       operationId: 'deleteObject'
       tags:
         - Object Management
+      security: []
       parameters:
         - name: 'bucket'
           in: path
@@ -94,8 +144,125 @@ paths:
      put:
       summary: Add an object in a bucket.
       operationId: 'putObject'
+      security: []
       tags:
         - Object Management
+      parameters:
+        - name: 'bucket'
+          in: path
+          description: Bucket name.
+          type: string
+          required: true
+        - name: 'http-text'
+          in: body
+          description: object content.
+          schema:
+            type: string
+          required: true
+      responses:
+        201:
+          description: Ok.
+          schema:
+            type: object
+            properties:
+              id:
+                type: integer
+                format: int64
+                
+        400:
+          description: Bad request.
+        401:
+          description: Not authenticated.
+        403:
+          description: Forbidden.
+        404:
+          description: Object not found.        
+        500:
+          description: Failed to put object.
+        503:
+          description: Not available.
+
+  /secure/objects/{bucket}/{objectID}:
+    get:
+      summary: Get object by bucket name and object id.
+      operationId: 'getSecureObject'
+      tags:
+        - Secure Object Management
+
+      parameters:
+        - name: 'bucket'
+          in: path
+          description: Bucket name.
+          type: string
+          required: true
+        - name: 'objectID'
+          in: path
+          description: object id.
+          type: integer
+          format: int64
+          required: true
+      responses:
+        200:
+          description: Ok.
+          schema:
+            type: object
+            required:
+              - object
+            properties:
+              object:
+                $ref: '#/definitions/object'
+        400:
+          description: Bad request.
+        401:
+          description: Not authenticated.
+        403:
+          description: Forbidden.
+        404:
+          description: Object not found.        
+        500:
+          description: Failed to list groups.
+        503:
+          description: Not available.
+          
+
+    delete:
+      summary: delete an object.
+      operationId: 'deleteSecureObject'
+      tags:
+        - Secure Object Management
+      parameters:
+        - name: 'bucket'
+          in: path
+          description: Bucket name.
+          type: string
+          required: true
+        - name: 'objectID'
+          in: path
+          description: object id.
+          type: integer
+          format: int64
+          required: true
+      responses:
+        200:
+          description: Ok.
+        400:
+          description: Bad request.
+        401:
+          description: Not authenticated.
+        403:
+          description: Forbidden.
+        404:
+          description: Object not found.        
+        500:
+          description: Failed to delete object.
+        503:
+          description: Not available.      
+  /secure/objects/{bucket}:
+     put:
+      summary: Add an object in a bucket.
+      operationId: 'putSecureObject'
+      tags:
+        - Secure Object Management
       parameters:
         - name: 'bucket'
           in: path
@@ -142,3 +309,17 @@ definitions:
         format: int64
       data:
         type: string
+  error:
+    type: object
+    required:
+       - message
+    properties:
+      code:
+        type: integer
+        format: int64
+      message:
+        type: string
+      fields:
+        type: string
+  principal:
+    type: string      
